<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_Rentals" Id="{05ad77ec-523d-41d0-a291-e7685e124667}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	iTotalRentalsOfLastPeriod : DINT; // Last Hour Total Rentals
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>